--- a/css/style.css
+++ b/css/style.css
@@ -4,34 +4,32 @@
   box-sizing: border-box;
   text-decoration: none; }
 
-.nav {
-  width: 100%;
-  height: 10vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: #98be90; }
-  .nav__h1 {
-    font-family: "Raleway", sans-serif;
-    font-size: 2rem; }
+body {
+  width: 100vw;
+  overflow-x: hidden; }
 
 .landing-section {
   width: 100%;
   height: 100vh;
-  padding: 3rem;
+  padding: 0 3rem 6rem 0;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-  background: url("../media/bannerImg.jpg");
+  justify-content: flex-end;
+  align-items: flex-end;
+  background: url("../media/noorulabdeen-ahmad-MW_2Osq-yIE-unsplash.jpg");
   background-size: cover;
   background-repeat: no-repeat; }
   .landing-section__heading {
-    width: 80%;
     font-family: "Raleway", sans-serif;
     font-weight: bold;
     font-size: 5rem;
-    color: white; }
+    color: white;
+    text-align: right; }
+    .landing-section__heading--sm {
+      font-size: 4rem; }
+    .landing-section__heading--lg {
+      font-size: 8rem;
+      line-height: 1; }
   .landing-section__p {
     font-family: "Raleway", sans-serif;
     font-size: 1.2rem; }
@@ -63,7 +61,45 @@
   justify-content: center; }
 
 .accordion {
-  width: 50%; }
+  width: 55%; }
+  .accordion__card {
+    border-radius: 0;
+    border: 0; }
+  .accordion__card-header {
+    height: 90px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; }
+    .accordion__card-header--one {
+      background-image: url("https://images.unsplash.com/photo-1624339670574-180cafe93ea2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"); }
+    .accordion__card-header--two {
+      background-image: url("https://images.unsplash.com/photo-1516660198581-439b5ac48822?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"); }
+    .accordion__card-header--three {
+      background-image: url("https://images.unsplash.com/photo-1533073526757-2c8ca1df9f1c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=870&q=80"); }
+  .accordion__header-text {
+    text-transform: uppercase;
+    font-family: "Changa One", cursive;
+    color: white;
+    font-size: 2rem;
+    outline: none; }
+    .accordion__header-text:hover {
+      color: #582605;
+      text-decoration: none; }
+    .accordion__header-text:focus {
+      box-shadow: none; }
+  .accordion__tempGraph {
+    width: 60%; }
+  .accordion__card-body {
+    padding: 3rem;
+    font-family: "Raleway", sans-serif;
+    font-size: 1.2rem; }
+  .accordion__weblink {
+    font-family: "Raleway", sans-serif;
+    font-weight: bold;
+    color: #582605;
+    font-size: 1.5rem; }
+  .accordion__subheader {
+    font-size: 1.5rem; }
 
 .solution-section {
   width: 100%;
